--- a/documentation/Sendgrid.docset/Contents/Info.plist
+++ b/documentation/Sendgrid.docset/Contents/Info.plist
@@ -5,22 +5,19 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.SendGrid.Sample</string>
+	<string>com.SendGrid.Sendgrid</string>
 	<key>CFBundleName</key>
-	<string>Sample Documentation</string>
+	<string>Sendgrid API Documentation</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	
-	
-	
 	<key>DocSetFallbackURL</key>
-	<string>http://www.sendgrid.com/SendGrid</string>
+	<string>http://www.sendgrid.com/</string>
 	<key>DocSetFeedName</key>
-	<string>Sample Documentation</string>
+	<string>Sendgrid API Documentation</string>
 	<key>DocSetFeedURL</key>
-	<string>http://www.sendgrid.com/SendGrid/SendGrid.atom</string>
+	<string>http://www.sendgrid.com/Docs/</string>
 	<key>DocSetMinimumXcodeVersion</key>
 	<string>3.0</string>
 	<key>DocSetPlatformFamily</key>
